--- a/article/bef20210204.md
+++ b/article/bef20210204.md
@@ -3,20 +3,20 @@
 
 恭喜团队网站成立并上传图片！
 
-![560-4](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/560%20(4).jpg?raw=true)
+![560 _4_.jpg](https://i.loli.net/2021/02/04/ehkHC8D93E4gOLI.jpg)
 
-![566-7](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/566%20(7).jpg?raw=true)
+![566 _7_.jpg](https://i.loli.net/2021/02/04/p3nOKgrza4fGSeD.jpg)
 
-![568-7](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/568%20(7).jpg?raw=true)
+![570 _20_.jpg](https://i.loli.net/2021/02/04/YRWTBqjX1ZkKz9E.jpg)
 
-![571-1](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/571%20(1).jpg?raw=true)
+![571 _1_.jpg](https://i.loli.net/2021/02/04/jtlp58UDyZVfYRI.jpg)
 
-![577-3](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/577%20(3).jpg?raw=true)
+![577 _3_.jpg](https://i.loli.net/2021/02/04/iv8o5qgTxftCMmp.jpg)
 
-![579-4](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/579%20(4).jpg?raw=true)
+![579 _4_.jpg](https://i.loli.net/2021/02/04/yaUHkvxCV3bYJTL.jpg)
 
-![579-5](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/579%20(5).jpg?raw=true)
+![579 _5_.jpg](https://i.loli.net/2021/02/04/r4xQAzFbOdinTkJ.jpg)
 
-![580-5](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/580%20(5).jpg?raw=true)
+![580 _5_.jpg](https://i.loli.net/2021/02/04/6EAnlTDzW2x5SJy.jpg)
 
-![580-6](https://github.com/SL-Zhangjn-Team/SLZJNT-PicService/blob/master/202102/580%20(6).jpg?raw=true)
+![580 _6_.jpg](https://i.loli.net/2021/02/04/f2A7F8vkiSLJQwq.jpg)
