优化用户体验

--- a/article/bef20210204.md
+++ b/article/bef20210204.md
@@ -3,6 +3,10 @@
 
 恭喜团队网站成立并上传图片！
 
+-------------------
+
+精选图片
+
 ![560 _4_.jpg](https://i.loli.net/2021/02/04/ehkHC8D93E4gOLI.jpg)
 
 ![566 _7_.jpg](https://i.loli.net/2021/02/04/p3nOKgrza4fGSeD.jpg)
