--- a/article/bef20210204.md
+++ b/article/bef20210204.md
@@ -1,6 +1,12 @@
 # 团队网站成立、第二弹图片开始推送
 时间：2021/2/4
 
+----------------------
+
+[新仓库地址](https://github.com/SL-Zhangjn-Team/ArtPicturesZjn-ING-202102)
+
+[回顾历史](https://github.com/SL-Zhangjn-Team/ArtPicturesZjn-BC-202010)
+
 恭喜团队网站成立并上传图片！
 
 -------------------
