--- a/article/bef20210204.md
+++ b/article/bef20210204.md
@@ -1,5 +1,5 @@
 # 团队网站成立、第二弹图片开始推送
-时间：2021/2/4
+时间：2021/2/4 [![返回主页](https://imgchr.com/i/yYeRFx)](https://sl-zhangjn-team.github.io/)
 
 ----------------------
 
